--- a/en/achievements_l_english.properties
+++ b/en/achievements_l_english.properties
@@ -8,9 +8,9 @@ NEW_ACHIEVEMENT_1_5_NAME코0=Defender of the Faith
 NEW_ACHIEVEMENT_1_5_DESC코0=Become Defender of the Faith.
 NEW_ACHIEVEMENT_1_6_NAME코0=Until death do us apart
 NEW_ACHIEVEMENT_1_6_DESC코0=Secure a Royal Marriage with another country.
-NEW_ACHIEVEMENT_1_7_NAME코0=That is mine\!
+NEW_ACHIEVEMENT_1_7_NAME코0=That is mine!
 NEW_ACHIEVEMENT_1_7_DESC코0=Conquer a province.
-NEW_ACHIEVEMENT_1_8_NAME코0=Victorious\!
+NEW_ACHIEVEMENT_1_8_NAME코0=Victorious!
 NEW_ACHIEVEMENT_1_8_DESC코0=Win a war.
 NEW_ACHIEVEMENT_1_9_NAME코0=The Emperors new clothes
 NEW_ACHIEVEMENT_1_9_DESC코0=Overthrow Austria and become the Emperor of the Holy Roman Empire.
@@ -22,7 +22,7 @@ NEW_ACHIEVEMENT_1_12_NAME코0=Azur semé de lis or
 NEW_ACHIEVEMENT_1_12_DESC코0=Get all the French Cores as France.
 NEW_ACHIEVEMENT_1_13_NAME코0=Not so sad a state...
 NEW_ACHIEVEMENT_1_13_DESC코0=As Portugal, have a colony in Brazil and in Africa.
-NEW_ACHIEVEMENT_1_14_NAME코0=Seriously?\!
+NEW_ACHIEVEMENT_1_14_NAME코0=Seriously?!
 NEW_ACHIEVEMENT_1_14_DESC코0=Kill 10,000 men in one battle.
 NEW_ACHIEVEMENT_1_15_NAME코0=It's all about the money
 NEW_ACHIEVEMENT_1_15_DESC코0=Accumulate 3000 gold.
@@ -38,7 +38,7 @@ NEW_ACHIEVEMENT_1_20_NAME코0=Cold War
 NEW_ACHIEVEMENT_1_20_DESC코0=Win a war without fighting a single battle.
 NEW_ACHIEVEMENT_1_21_NAME코0=Royal Authority
 NEW_ACHIEVEMENT_1_21_DESC코0=Install a union through a succession war.
-NEW_ACHIEVEMENT_1_22_NAME코0=Viva la Revolución\!
+NEW_ACHIEVEMENT_1_22_NAME코0=Viva la Revolución!
 NEW_ACHIEVEMENT_1_22_DESC코0=Have rebels you support in another country enforce their demands.
 NEW_ACHIEVEMENT_1_23_NAME코0=Brothers in Arms
 NEW_ACHIEVEMENT_1_23_DESC코0=Win a war as a secondary participant.
@@ -46,9 +46,9 @@ NEW_ACHIEVEMENT_1_24_NAME코0=No Pirates in my Caribbean
 NEW_ACHIEVEMENT_1_24_DESC코0=Own or have a subject own the entire Caribbean.
 NEW_ACHIEVEMENT_1_25_NAME코0=Master of India
 NEW_ACHIEVEMENT_1_25_DESC코0=Own and have cores on all of India as a European nation.
-NEW_ACHIEVEMENT_1_26_NAME코0=Sweden is not overpowered\!
+NEW_ACHIEVEMENT_1_26_NAME코0=Sweden is not overpowered!
 NEW_ACHIEVEMENT_1_26_DESC코0=Own and have cores on the entire Baltic coastline as Sweden.
-NEW_ACHIEVEMENT_1_27_NAME코0=My armies are invincible\!
+NEW_ACHIEVEMENT_1_27_NAME코0=My armies are invincible!
 NEW_ACHIEVEMENT_1_27_DESC코0=Gain at least 7.0 land morale.
 NEW_ACHIEVEMENT_1_28_NAME코0=This navy can take it all
 NEW_ACHIEVEMENT_1_28_DESC코0=Gain at least 7.0 naval morale.
@@ -146,13 +146,13 @@ NEW_ACHIEVEMENT_7_11_NAME코0=Sons of Carthage
 NEW_ACHIEVEMENT_7_11_DESC코0=As Tunisia, own and have cores on Sicily, Sardinia, the Balearic Islands, the coast of Algiers and the southern coast of Spain.
 NEW_ACHIEVEMENT_7_12_NAME코0=The Princess is in this Castle
 NEW_ACHIEVEMENT_7_12_DESC코0=As a country that does not start with a female heir, have a female heir while having a Castle in your capital (more advanced fort buildings do not count).
-NEW_ACHIEVEMENT_7_13_NAME코0=Electable\!
+NEW_ACHIEVEMENT_7_13_NAME코0=Electable!
 NEW_ACHIEVEMENT_7_13_DESC코0=Become an elector in the HRE as a country which does not start as elector.
 NEW_ACHIEVEMENT_7_14_NAME코0=Vasa or Wettin?
 NEW_ACHIEVEMENT_7_14_DESC코0=Get a ruler of your dynasty on the throne of Poland or the Commonwealth while they are an elective monarchy.
-NEW_ACHIEVEMENT_7_15_NAME코0=Sinaasappel\!
+NEW_ACHIEVEMENT_7_15_NAME코0=Sinaasappel!
 NEW_ACHIEVEMENT_7_15_DESC코0=Get Orangists in power with 100% Republican Tradition, and owning a province in China.
-NEW_ACHIEVEMENT_7_16_NAME코0=One King to Rule\!
+NEW_ACHIEVEMENT_7_16_NAME코0=One King to Rule!
 NEW_ACHIEVEMENT_7_16_DESC코0=As Poland, become an absolutist monarchy, abolishing the Sejm.
 NEW_ACHIEVEMENT_7_17_NAME코0=Venetian Sea
 NEW_ACHIEVEMENT_7_17_DESC코0=Have a 75% Trade share in both the Alexandria and Constantinople nodes as Venice, owning less than 10 cities.
@@ -214,7 +214,7 @@ NEW_ACHIEVEMENT_8_13_NAME코0=Raja of the Rajput Reich
 NEW_ACHIEVEMENT_8_13_DESC코0=Conquer all of Germany as Nagaur.
 NEW_ACHIEVEMENT_8_14_NAME코0=The Sun Never Sets on the Indian Empire
 NEW_ACHIEVEMENT_8_14_DESC코0=Form Hindustan or Bharat and own or have a subject own Cape, London, Hong Kong (Canton) and Ottawa (Kichesipi).
-NEW_ACHIEVEMENT_8_15_NAME코0=Over a Thousand\!
+NEW_ACHIEVEMENT_8_15_NAME코0=Over a Thousand!
 NEW_ACHIEVEMENT_8_15_DESC코0=Own 1001 provinces directly.
 NEW_ACHIEVEMENT_8_16_NAME코0=Dracula's Revenge
 NEW_ACHIEVEMENT_8_16_DESC코0=Start as Wallachia or Moldavia, form Romania and own or have a subject own all of the Balkans.
@@ -232,7 +232,7 @@ NEW_ACHIEVEMENT_8_22_NAME코0=Imperio español
 NEW_ACHIEVEMENT_8_22_DESC코0=As Spain have Mexico, Panama, Havana, Cuzco in colonial Nations under you.
 NEW_ACHIEVEMENT_8_23_NAME코0=Blockader
 NEW_ACHIEVEMENT_8_23_DESC코0=Blockade at least 10 ports of one enemy.
-NEW_ACHIEVEMENT_8_24_NAME코0=This is Persia\!
+NEW_ACHIEVEMENT_8_24_NAME코0=This is Persia!
 NEW_ACHIEVEMENT_8_24_DESC코0=Form Persia and own Egypt, Anatolia and Greece as core provinces.
 NEW_ACHIEVEMENT_8_25_NAME코0=Kirishitan Japan
 NEW_ACHIEVEMENT_8_25_DESC코0=Start as a Japanese Daimyo, convert yourself and all of Japan to Christianity.
@@ -258,7 +258,7 @@ NEW_ACHIEVEMENT_9_3_NAME코0=Bleed Them Dry
 NEW_ACHIEVEMENT_9_3_DESC코0=Have 10 different War Reparations being paid to you at the same time.
 NEW_ACHIEVEMENT_9_4_NAME코0=Subsidize my Love
 NEW_ACHIEVEMENT_9_4_DESC코0=Subsidize 3 different allies at least 50% of their monthly income without running a deficit.
-NEW_ACHIEVEMENT_9_5_NAME코0=Take that, von Habsburgs\!
+NEW_ACHIEVEMENT_9_5_NAME코0=Take that, von Habsburgs!
 NEW_ACHIEVEMENT_9_5_DESC코0=As Hungary, own all of Austria as core provinces.
 NEW_ACHIEVEMENT_9_6_NAME코0=The White Elephant
 NEW_ACHIEVEMENT_9_6_DESC코0=As Ayutthaya, own all of Indochina as core provinces.
@@ -281,7 +281,7 @@ NEW_ACHIEVEMENT_9_14_DESC코0=As Bohemia, own Dublin as a core province.
 NEW_ACHIEVEMENT_9_15_NAME코0=Komnenoi Empire
 NEW_ACHIEVEMENT_9_15_DESC코0=As Trebizond, have the Empire government rank.
 NEW_ACHIEVEMENT_9_16_NAME코0=Lucky Lucca
-NEW_ACHIEVEMENT_9_16_DESC코0=As Lucca, own Lucknow\!
+NEW_ACHIEVEMENT_9_16_DESC코0=As Lucca, own Lucknow!
 NEW_ACHIEVEMENT_9_17_NAME코0=A Fine Goosestep
 NEW_ACHIEVEMENT_9_17_DESC코0=Form Prussia and have at least 125% Discipline.
 NEW_ACHIEVEMENT_9_18_NAME코0=Meissner Porcelain
@@ -318,7 +318,7 @@ NEW_ACHIEVEMENT_10_1_NAME코0=Tatarstan
 NEW_ACHIEVEMENT_10_1_DESC코0=As Kazan or Nogai, own all Tatar culture group lands.
 NEW_ACHIEVEMENT_10_2_NAME코0=Terra Mariana
 NEW_ACHIEVEMENT_10_2_DESC코0=As Riga, own the Baltic region as core provinces.
-NEW_ACHIEVEMENT_10_3_NAME코0=Blood for the Sky God\!
+NEW_ACHIEVEMENT_10_3_NAME코0=Blood for the Sky God!
 NEW_ACHIEVEMENT_10_3_DESC코0=As a Tengri nation, have Nahuatl as your syncretic faith.
 NEW_ACHIEVEMENT_10_4_NAME코0=Pyramid of Skulls
 NEW_ACHIEVEMENT_10_4_DESC코0=As a Steppe Horde, raze a province with at least 30 development.
@@ -327,12 +327,12 @@ NEW_ACHIEVEMENT_10_5_DESC코0=Have five allies with 100 trust towards you each.
 NEW_ACHIEVEMENT_10_6_NAME코0=The Continuation of Diplomacy
 NEW_ACHIEVEMENT_10_6_DESC코0=Successfully use Threaten War to gain a province from another nation.
 NEW_ACHIEVEMENT_10_7_NAME코0=Factionalism
-NEW_ACHIEVEMENT_10_7_DESC코0=Have 3 different estates in your country with at least 70% influence each.
+NEW_ACHIEVEMENT_10_7_DESC코0= Have 3 different estates in your country with at least 70% influence each.
 NEW_ACHIEVEMENT_10_8_NAME코0=From Humble Origins
 NEW_ACHIEVEMENT_10_8_DESC코0=Starting as a custom nation with no more than 50 points, have at least 2000 total development.
 NEW_ACHIEVEMENT_10_9_NAME코0=Ideas Guy
 NEW_ACHIEVEMENT_10_9_DESC코0=Starting as a custom nation with the full 800 points but no more than 3 total development, have a monthly income of at least 500 ducats.
-NEW_ACHIEVEMENT_10_10_NAME코0=For Odin\!
+NEW_ACHIEVEMENT_10_10_NAME코0=For Odin!
 NEW_ACHIEVEMENT_10_10_DESC코0=Starting as a Norse custom nation with no more than 200 points and a maximum of 5 provinces, own & core Scandinavia and the British Isles and convert it all to Norse.
 NEW_ACHIEVEMENT_10_11_NAME코0=Rekindling the Flames
 NEW_ACHIEVEMENT_10_11_DESC코0=Starting as a Zoroastrian custom nation with no more than 200 points and a maximum of 5 provinces, rekindle the royal fires.
@@ -572,7 +572,7 @@ NEW_ACHIEVEMENT_35_NAME코0=Trophy Hunter
 NEW_ACHIEVEMENT_35_DESC코0=Capture an enemy flagship.
 NEW_ACHIEVEMENT_36_NAME코0=Yarr Harr a Pirate's Life For Me
 NEW_ACHIEVEMENT_36_DESC코0=Choose to play as New Providence and conquer all of Caribbeans.
-NEW_ACHIEVEMENT_37_NAME코0=Why is the Rûm gone\!?
+NEW_ACHIEVEMENT_37_NAME코0=Why is the Rûm gone!?
 NEW_ACHIEVEMENT_37_DESC코0=As Asturias, establish an Order in Rum.
 NEW_ACHIEVEMENT_38_NAME코0=You Get A New Home, And You Get A New Home
 NEW_ACHIEVEMENT_38_DESC코0=Expel 5 different minorities to your colonies.
