--- a/en/achievement_tooltips_l_english.properties
+++ b/en/achievement_tooltips_l_english.properties
@@ -33,21 +33,21 @@ atleast_10_mahayana_tooltip코0=At least 10 countries must follow the Mahayana f
 achievement_sakoku_law_tooltip코0=Go Full Isolationist in at least 6 Incidents.
 achievement_live_long_and_prosper_tooltip코0=At least 30 States must be Prosperous.
 general_with_steam_name_won_battle_tt코0=General with Player's Steam Name won battle.
-propagated_in_five_moluccan_provinces코0=[Root.GetName] Propagated Religion in 5 provinces in the §YMollucas§\! Trade Node.
-achievement_david_the_builder_tooltip코0=[Root.GetName] has no open building slots in any of their provinces.
-all_coffee_owned_by_you코0=No §YCoffee§\! provinces in Asia, Europe, Africa or Oceania are owned by European Countries.
-chop_chop.tooltip코0=Had §Y6§\! separate consorts with only one Monarch.
+propagated_in_five_moluccan_provinces코0={Root.GetName} Propagated Religion in 5 provinces in the §YMollucas§! Trade Node.
+achievement_david_the_builder_tooltip코0={Root.GetName} has no open building slots in any of their provinces.
+all_coffee_owned_by_you코0=No §YCoffee§! provinces in Asia, Europe, Africa or Oceania are owned by European Countries.
+chop_chop.tooltip코0=Had §Y6§! separate consorts with only one Monarch.
 anglophile.tooltip코0=Completed all English and British missions.
 achievement_mewar_never_changes_tooltip코0=Completed all Mewar missions.
 achievement_the_coin_is_stronger_than_the_sword_tooltip코0=Purchase an Indian province using Charter Company.
 populists_in_government_tooltip코0=Switch your Government type by enacting Government Reforms.
-achievement_fine_financials_tooltip코0=Own at least §Y8§\! level §Y3§\! Centers of Trade
-achievement_sweet_home_qaraqorum_tooltip코0=§YMongol§\! is an accepted culture
-achievement_eat_your_greens_tooltip코0=Own or have a subject own every province in §YAsia§\! with the §YGrasslands§\! terrain before the Age of Absolutism
+achievement_fine_financials_tooltip코0=Own at least §Y8§! level §Y3§! Centers of Trade
+achievement_sweet_home_qaraqorum_tooltip코0=§YMongol§! is an accepted culture
+achievement_eat_your_greens_tooltip코0=Own or have a subject own every province in §YAsia§! with the §YGrasslands§! terrain before the Age of Absolutism
 achievement_emperor_of_hindustan_tooltip코0=Restore Delhi's borders to their greatest historical extent
-achievement_the_pheasant_strut_tooltip코0=Defeat Prussia with at least §Y100 000§\! Prussian casualties in a war, with Nepal and Prussia as war leaders
+achievement_the_pheasant_strut_tooltip코0=Defeat Prussia with at least §Y100 000§! Prussian casualties in a war, with Nepal and Prussia as war leaders
 completed_spanish_missions코0=Completed all Spanish missions.
 discovered_random_new_world코0=Discovered the entire New World.
 captured_a_flagship코0=Has captured an enemy Flagship.
 expelled_5_different_minorities_tooltip코0=Has expelled 5 different minorities.
-spanish_fly_tooltip코0=Any country with a capital in the Iberia region is a Junior Partner of [Root.GetName].
+spanish_fly_tooltip코0=Any country with a capital in the Iberia region is a Junior Partner of {Root.GetName}.
