--- a/en/achievements_l_english.properties
+++ b/en/achievements_l_english.properties
@@ -1,4 +1,4 @@
-NEW_ACHIEVEMENT_1_2_NAME코0=For the Glory
+﻿NEW_ACHIEVEMENT_1_2_NAME코0=For the Glory
 NEW_ACHIEVEMENT_1_2_DESC코0=Diplo-annex a vassal.
 NEW_ACHIEVEMENT_1_3_NAME코0=That's a Grand Army
 NEW_ACHIEVEMENT_1_3_DESC코0=Build up your army to your country's maximum army forcelimit.
@@ -417,7 +417,7 @@ NEW_ACHIEVEMENT_11_18_DESC코0=Enact a Golden Age as an Empire.
 NEW_ACHIEVEMENT_11_19_NAME코0=Cherrypicking
 NEW_ACHIEVEMENT_11_19_DESC코0=Conscript a 3 star general from a Daimyo Subject.
 NEW_ACHIEVEMENT_11_20_NAME코0=These Banners need a Saga
-NEW_ACHIEVEMENT_11_20_DESC코0=Have 100 regiments as Banners raised at the same time.
+NEW_ACHIEVEMENT_11_20_DESC코1=Starting as a Jurchen nation, have 100 regiments of Banners raised at the same time.
 NEW_ACHIEVEMENT_11_21_NAME코0=Sweet Harmony
 NEW_ACHIEVEMENT_11_21_DESC코0=Harmonize 7 religions as Confucian.
 NEW_ACHIEVEMENT_11_22_NAME코0=Sakoku Law
@@ -431,7 +431,7 @@ NEW_ACHIEVEMENT_11_25_DESC코1=Become Chinese Emperor as Qing and own all of Chi
 NEW_ACHIEVEMENT_11_26_NAME코0=Three Trivial Tributary Tribes
 NEW_ACHIEVEMENT_11_26_DESC코0=Have 3 Tribal States as Tributaries.
 NEW_ACHIEVEMENT_11_27_NAME코0=Made in Japan
-NEW_ACHIEVEMENT_11_27_DESC코0=Embrace "manufacturies" institution as Japan by 1655.
+NEW_ACHIEVEMENT_11_27_DESC코1=Embrace "manufactories" institution as Japan by 1655.
 NEW_ACHIEVEMENT_11_28_NAME코0=The First Toungoo Empire
 NEW_ACHIEVEMENT_11_28_DESC코0=As Taungu, unite the Burman culture group by 1500.
 NEW_ACHIEVEMENT_11_29_NAME코0=Disciples of Enlightenment
@@ -448,6 +448,7 @@ NEW_ACHIEVEMENT_12_2_NAME코0=The Navigator
 NEW_ACHIEVEMENT_12_2_DESC코0=As Portugal, get owned provinces in Africa, India and Indonesia before 1500.
 NEW_ACHIEVEMENT_12_3_NAME코0=Turtles all the way down
 NEW_ACHIEVEMENT_12_3_DESC코0=As Korea get 135% Ship Durability.
+# Cradle of Civilization
 NEW_ACHIEVEMENT_12_14_NAME코0=Bunte Kuh
 NEW_ACHIEVEMENT_12_14_DESC코0=As Hamburg, trade in both Gems and Livestock.
 NEW_ACHIEVEMENT_12_15_NAME코0=Good King Renee
@@ -465,7 +466,7 @@ NEW_ACHIEVEMENT_12_20_DESC코0=Starting as Karaman, form the Sultanate of Rum.
 NEW_ACHIEVEMENT_12_21_NAME코0=David the Builder
 NEW_ACHIEVEMENT_12_21_DESC코0=As Imereti, form Georgia and have no free building slots.
 NEW_ACHIEVEMENT_12_22_NAME코0=Voltaire's Nightmare
-NEW_ACHIEVEMENT_12_22_DESC코0=Have at least 75 countries in the HRE.
+NEW_ACHIEVEMENT_12_22_DESC코1=Have at least 100 countries in the HRE.
 NEW_ACHIEVEMENT_12_24_NAME코0=Pandya Empire
 NEW_ACHIEVEMENT_12_24_DESC코0=Starting as Madurai, conquer the Pandya Territories.
 NEW_ACHIEVEMENT_12_25_NAME코0=The Prince of Egypt
@@ -473,7 +474,7 @@ NEW_ACHIEVEMENT_12_25_DESC코0=Starting as Florence, form Egypt.
 NEW_ACHIEVEMENT_12_26_NAME코0=Around the World in 80 Years
 NEW_ACHIEVEMENT_12_26_DESC코0=Starting as a Custom Nation of up to 400 points in the British Region, own New York, San Francisco, Suez, Bombay, Calcutta, Hong Kong and Yokohama by 1524.11.11.
 NEW_ACHIEVEMENT_12_27_NAME코0=Hard Bargaining
-NEW_ACHIEVEMENT_12_27_DESC코0=As Defender of a Muslim Faith, propagate your religion in The Moluccas through trade to convert 5 provinces.
+NEW_ACHIEVEMENT_12_27_DESC코1=As Defender of a Muslim Faith, propagate your religion in The Moluccas through trade to convert 5 provinces.
 NEW_ACHIEVEMENT_12_28_NAME코0=Early-Modern Warfare
 NEW_ACHIEVEMENT_12_28_DESC코0=Have 100 regiments at 100% Army Drill.
 NEW_ACHIEVEMENT_12_29_NAME코0=Sworn Fealty
@@ -488,6 +489,7 @@ NEW_ACHIEVEMENT_12_33_NAME코0=The Levant Turnabout
 NEW_ACHIEVEMENT_12_33_DESC코0=As the Mamluks, have 100 Army Professionalism and annex the Ottomans.
 NEW_ACHIEVEMENT_12_34_NAME코0=Cowardly Tactics
 NEW_ACHIEVEMENT_12_34_DESC코0=Have a fort and a supply depot in a mountainous province producing livestock.
+# THIRD ROME
 NEW_ACHIEVEMENT_13_1_NAME코0=Dovmont's Own
 NEW_ACHIEVEMENT_13_1_DESC코0=Starting as Pskov, have 100 standing Streltsy units.
 NEW_ACHIEVEMENT_13_2_NAME코0=Redecorating
@@ -508,6 +510,7 @@ NEW_ACHIEVEMENT_13_9_NAME코0=It's All Greek To Me
 NEW_ACHIEVEMENT_13_9_DESC코0=Form Greece and own and have cores on Zeta, Thatta, Lamba, and Roh.
 NEW_ACHIEVEMENT_13_10_NAME코0=The 52 Garhs
 NEW_ACHIEVEMENT_13_10_DESC코0=As Garhwal own and maintain 52 forts without going into debt.
+# RULE BRITANNIA
 NEW_ACHIEVEMENT_14_1_NAME코0=Home and Away
 NEW_ACHIEVEMENT_14_1_DESC코0=As Wales, hold Cardiff, Dublin, Edinburgh, Rome, Paris and London.
 NEW_ACHIEVEMENT_14_2_NAME코0=Sun Invasion
@@ -528,6 +531,7 @@ NEW_ACHIEVEMENT_14_9_NAME코0=Industrial Powerhouse
 NEW_ACHIEVEMENT_14_9_DESC코0=Have 10 furnaces built in your nation.
 NEW_ACHIEVEMENT_14_10_NAME코0=Chop Chop
 NEW_ACHIEVEMENT_14_10_DESC코0=With only one Monarch, have six different Consorts.
+# Dharma
 NEW_ACHIEVEMENT_15_NAME코0=Mewar Never Changes
 NEW_ACHIEVEMENT_15_DESC코0=Complete the Mewar Mission Tree.
 NEW_ACHIEVEMENT_16_NAME코0=Fine Financials
@@ -568,6 +572,7 @@ NEW_ACHIEVEMENT_33_NAME코0=Cotton Kandy
 NEW_ACHIEVEMENT_33_DESC코0=As Kandy be production leader in Cotton.
 NEW_ACHIEVEMENT_34_NAME코0=The Pheasant Strut
 NEW_ACHIEVEMENT_34_DESC코0=As Gorkha form Nepal and defeat Prussia with at least 100,000 Prussian casualties in a war (both have to be primary targets of war).
+# Golden Century
 NEW_ACHIEVEMENT_35_NAME코0=Trophy Hunter
 NEW_ACHIEVEMENT_35_DESC코0=Capture an enemy flagship.
 NEW_ACHIEVEMENT_36_NAME코0=Yarr Harr a Pirate's Life For Me
@@ -588,3 +593,34 @@ NEW_ACHIEVEMENT_43_NAME코0=The League of Mayapan
 NEW_ACHIEVEMENT_43_DESC코0=Starting as Huastec, form Maya.
 NEW_ACHIEVEMENT_44_NAME코0=Where Am I?
 NEW_ACHIEVEMENT_44_DESC코0=As a New World native with Random New World active, explore the entire New World.
+# Emperor
+NEW_ACHIEVEMENT_45_NAME코0=AEIOU
+NEW_ACHIEVEMENT_45_DESC코0=Complete the Austrian mission tree.
+NEW_ACHIEVEMENT_46_NAME코0=Napoleon’s Ambition
+NEW_ACHIEVEMENT_46_DESC코0=As Revolutionary France, spread the Revolution to 10 countries.
+NEW_ACHIEVEMENT_47_NAME코0=Everything's Coming Up Mulhouse
+NEW_ACHIEVEMENT_47_DESC코0=Starting as Mulhouse, become Emperor of the HRE and completely decentralize the Empire.
+NEW_ACHIEVEMENT_48_NAME코0=Global Hegemony
+NEW_ACHIEVEMENT_49_DESC코0=Reach 100% Strength as any type of Hegemon.
+NEW_ACHIEVEMENT_50_NAME코0=God Tier
+NEW_ACHIEVEMENT_50_DESC코0=Become a Tier 5 Defender of the Faith as a nation that is neither Catholic nor Sunni.
+NEW_ACHIEVEMENT_51_NAME코0=Spaghetti Western
+NEW_ACHIEVEMENT_51_DESC코0=Starting as Bologna, become Mexico or Texas.
+NEW_ACHIEVEMENT_52_NAME코0=Don’t be Cilli
+NEW_ACHIEVEMENT_52_DESC코0=Starting as Cilli, form another nation.
+NEW_ACHIEVEMENT_53_NAME코0=Inner Turmoil
+NEW_ACHIEVEMENT_53_DESC코0=Starting as The Isles, own 20 provinces by 1500, none of which are on Islands.
+NEW_ACHIEVEMENT_54_NAME코0=Stern des Südens
+NEW_ACHIEVEMENT_54_DESC코0=Form Bavaria starting as München and have your Subject Bremen own Werder.
+NEW_ACHIEVEMENT_55_NAME코0=Kingdom of God
+NEW_ACHIEVEMENT_55_DESC코0=Starting as the Papal State, become the Kingdom of God
+NEW_ACHIEVEMENT_56_NAME코0=Stiff Upper Lippe
+NEW_ACHIEVEMENT_56_DESC코0=As Lippe, own all of the British Isles.
+NEW_ACHIEVEMENT_57_NAME코0=On the Rhodes Again
+NEW_ACHIEVEMENT_57_DESC코0=Starting as The Knights, conquer and core Constantinople, Jerusalem and Antioch.
+NEW_ACHIEVEMENT_58_NAME코0=Czechs and Balances
+NEW_ACHIEVEMENT_58_DESC코0=Starting as Bohemia, grant at least two privileges to each estate while having at least 50% Crown Land.
+NEW_ACHIEVEMENT_59_NAME코0=Mary of Lotharingia
+NEW_ACHIEVEMENT_59_DESC코0=Starting as Burgundy, form Lotharingia and have a female ruler named Marie.
+NEW_ACHIEVEMENT_60_NAME코0=Holiest Roman Empire
+NEW_ACHIEVEMENT_60_DESC코0=As either the Papal States or the Emperor, have the Papal States as an Elector while the HRE is officially Catholic.
