--- a/en/core_l_english.properties
+++ b/en/core_l_english.properties
@@ -1,4 +1,4 @@
-MENU_MESSAGES_DISABLE_ALL코0=Disable all
+﻿MENU_MESSAGES_DISABLE_ALL코0=Disable all
 ai_handicap코0=AI Bonuses
 player_handicap코0=Player Bonuses
 FILTER코0=Filter
@@ -143,7 +143,7 @@ GALLEY코0=Galley
 TRANSPORT코0=Transport
 CONVREL_PAPACY코0=The Papacy cannot convert to another religion.
 AND_MONTHLY_THE_FOLLOWING코0=And changes each month $VAL|Y1%$ due to:\n$DESC$
-PIETY_DESCRIPTION코1=Piety represents the type of religious devotion that your ruler promotes within your nation. It is measured on a scale between -100 (§YMysticism§!) and 100 (§YLegalism§!).\nThe piety of your ruler is affected by various actions you can take. Event options will move your position on the scale as will declaring war on infidels (Increase), brothers in faith (Decrease) or successfully converting provinces (Increase).
+PIETY_DESCRIPTION코2=Piety represents the type of religious devotion that your ruler promotes within your nation. It is measured on a scale between -100 (§YMysticism§!) and 100 (§YLegalism§!).\nThe piety of your ruler is affected by various actions you can take. Event options will move your position on the scale as will declaring war on infidels (Increase) or brothers in faith (Decrease).
 PIETY_DESCRIPTION_ESTATES코1=\nThe type of piety of your ruler will influence the loyalty of your Estates.
 KARMA_DESC2코0=Karma represents the divinity of your past actions in the eyes of the Buddhist faith and will rise or fall depending on the morality of actions you take. A ruler with too extreme Karma will become detached from the world. Too high Karma means losing the trust of the common soldier while too low Karma will make you ineffective on the diplomatic arena. Countries with Karma do not pay any diplomatic power cost for returning cores and releasing countries and vassals in peace deals.
 KARMA_DESC코0=Karma increases from:\n- §YHonoring alliances§!\n- §YReleasing vassals§!\n- §YReleasing nations in peace deals§!\n- §YReturning cores§!\n- §YConverting Provinces§!\n\nKarma decreases from:\n- §YStarting wars§!\n- §YTaking provinces in peace deals§!
@@ -214,6 +214,8 @@ BUILD_COST_NAVAL_OVERFORCELIMIT코0=Being over the Force Limit increases the cos
 NAVY_COMBAT_TOOLTIP코0=$NAME|Y$ is a §Y'$TYPE$'§!.\nThe morale is at §Y$MORALE|1$%§! of max and they are at $STRENGTH|Y$ strength.
 NAVY_COMBAT_TOOLTIP_LASTENGAGED코0=Last engaged enemy ship was $ENEMY|R$.
 NAVY_COMBAT_TOOLTIP_NOENGAGED코0=This ship did not engage any enemy last round.
+NAVY_COMBAT_TOOLTIP_DISENGAGED코0=§YThis ship has disengaged and will rejoin the fleet once the battle is over.§!
+NAVY_COMBAT_TOOLTIP_DEMORALIZED코0=§YThis ship is demoralized and will only try to disengage for now.§!
 LAND_COMBAT_TOOLTIP_LASTENGAGED코0=Last engaged enemy unit was $ENEMY|R$.
 HOTJOIN_LABEL코0=Hotjoin: 
 PREPARING_AFTER_HOTJOIN코0=Preparing the game after a hotjoin.
@@ -231,6 +233,7 @@ UNIT_VIEW_CHOOSE_LEADER_COMBAT코0=Can't choose a new leader because the unit is
 UNIT_VIEW_CHOOSE_LEADER_PORT코0=Can't choose a new leader because the fleet is not in port!
 UNIT_VIEW_CHOOSE_LEADER_LOADED코0=Can't choose a new leader because the unit is loaded on a ship!
 UNIT_VIEW_CHOOSE_LEADER_ENEMY코0=Can't choose a new leader because the unit is in enemy land!
+UNIT_VIEW_CHOOSE_LEADER_MERCENARY_COMPANY코0=This is a mercenary company, and they decide on their own leader.
 UNIT_VIEW_CHOOSE_LEADER_CONDOTTIERI코0=Can't choose a new leader because this unit is currently rented out as Condottieri!
 CANNOT_ASSIGN_MONARCH_CONDOTTIERI코0=You cannot assign a Monarch or an Heir as a leader of a Condottieri unit.
 COMBATEND_UNIT_START코0=Started with $NUM|Y$.
@@ -299,11 +302,11 @@ BUTTON_EMBRACE코0=Embrace
 INSTI_NOT_ACTIVE코0=$NAME|Y$ has not yet been discovered.
 INSTI_PRIMITIVE_CANNOT_EMBRACE_RELIGION코0=Primitive countries must reform their religion before embracing Institutions.
 INSTI_PRIMITIVE_CANNOT_EMBRACE_GOVERNMENT코0=Primitive countries must reform their Government before embracing Institutions.
-INSTI_TOO_EXPENSIVE코0=We can not afford to embrace $NAME|Y$ as it would cost $COST|Y$¤ and we only have $CASH|Y$¤
+INSTI_TOO_EXPENSIVE코1=We cannot afford to embrace $NAME|Y$ as it would cost $COST|Y$¤ and we only have $CASH|Y$¤
 INSTI_NOT_ENOUGH_HOLD코0=The institution of $NAME|Y$ has not a big enough hold of our country for us to fully embrace it.  It needs to be embraced in at least $NEED|Y$ percent of our autonomy modified development, but it is only embraced in $CURR|Y$ percent.
 EMBRACE_INSTI_COST코0=Embracing $NAME|Y$ will cost $COST|Y$¤ and change our technology costs by $TECH$.
 MANAGE_OVEREXTENSION코0=Manage Overextension
-EMPEROR_DIPACTIONS_DESC코0=The Emperor may take the following diplomatic actions: \n$LIST|Y$
+EMPEROR_DIPACTIONS_DESC코0=\nThe Emperor may take the following diplomatic actions: \n$LIST|Y$
 PAPAL_CONTROLLER_DIPACTIONS_DESC코0=The Papal controller may take the following diplomatic actions: \n$LIST|Y$
 PAPACY_NEXT_CARDINALS코0=§YNext Possible Cardinals§W
 UNIT_UNLOCKED_AT_TECH코0='$UNIT|Y$' unlocked at $TECH$ ($LEVEL$).
@@ -329,6 +332,7 @@ MAPMODE_BUILDINGS_DESC코0=Colors the provinces according to how many buildings 
 MAPMODE_MISSIONARY_DESC코0=Colors the provinces according to whether they can be converted into the state religion. Green indicates a province which has another religion than the state religion, blue indicates a province being converted and gray indicates that the province already has the state religion.
 MAPMODE_REGION_DESC코0=Colors the provinces according to which region they belong to. Hovering over any province will reveal which area, region and continent it belongs to.
 MAPMODE_AREAS_DESC코0=Colors the provinces according to which area they belong to. Hovering over any province will reveal which area, region and continent it belongs to.
+MAPMODE_SUPER_REGION_DESC코0=Colors the provinces according to which subcontinent they belong to. Hovering over any province will reveal which area, region, subcontinent and continent it belongs to.
 MAPMODE_VICTORYCARDS_DESC코0=Colors the provinces according to which victory card they belong to (if any). Hovering over any province with a card will reveal the score for that card.
 MAPMODE_CULTURE_DESC코0=Colors the provinces according to the various cultures and displays the names of those cultures.
 MAPMODE_OPINION_DESC코0=Colors the provinces according to their owner's opinion towards the selected country.
@@ -428,8 +432,8 @@ ATTITUDETO코0=§Y$ADJ$ attitude towards $NAME$:§!
 PERSONALITYOF코0=§YPersonality:§!
 GOVERNMENT_RANK_LESS_THAN코0=Government Rank is less than 
 GOVERNMENT_RANK_GREATER_THAN코0=Government Rank is at least 
-BORDER_DISTANCE_LESS_THAN코0=Distance between borders is less than
-BORDER_DISTANCE_AT_LEAST코0=Distance between borders at least
+BORDER_DISTANCE_LESS_THAN코1=Distance between borders with $COUNTRY|Y$ is less than
+BORDER_DISTANCE_AT_LEAST코1=Distance between borders with $COUNTRY|Y$ is at least
 DIPLOMATIC_DISTANCE_LESS_THAN코0=Distance between capitals is less than
 DIPLOMATIC_DISTANCE_AT_LEAST코0=Distance between capitals at least
 PROVINCE_DISTANCE_LESS_THAN코0=Distance between $FROM|Y$ to $TO|Y$ is less than $VALUE|Y$.
@@ -454,16 +458,16 @@ TRUST_LESS_THAN코0=Trust is less than
 TRUST_AT_LEAST코0=Trust at least
 NAVY_NONE코0=No navy
 ARMY_NONE코0=No army
-ARMY_BALANCE_LESS_THAN코0=Relative army size ratio is less than
-ARMY_BALANCE_AT_LEAST코0=Relative army size ratio at least
-NAVY_BALANCE_LESS_THAN코0=Relative navy size ratio is less than
-NAVY_BALANCE_AT_LEAST코0=Relative navy size ratio at least
-MILITARY_STRENGTH_LESS_THAN코0=Relative military strength ratio is less than
-MILITARY_STRENGTH_AT_LEAST코0=Relative military strength ratio at least
-ARMY_STRENGTH_LESS_THAN코0=Relative army strength ratio is less than
-ARMY_STRENGTH_AT_LEAST코0=Relative army strength ratio at least
-NAVY_STRENGTH_LESS_THAN코0=Relative naval strength ratio is less than
-NAVY_STRENGTH_AT_LEAST코0=Relative naval strength ratio at least
+ARMY_BALANCE_LESS_THAN코1=Relative army size ratio compared to $COUNTRY|Y$ is less than
+ARMY_BALANCE_AT_LEAST코1=Relative army size ratio compared to $COUNTRY|Y$ is at least
+NAVY_BALANCE_LESS_THAN코1=Relative navy size ratio compared to $COUNTRY|Y$ is less than
+NAVY_BALANCE_AT_LEAST코1=Relative navy size ratio compared to $COUNTRY|Y$ is at least
+MILITARY_STRENGTH_LESS_THAN코1=Relative military strength ratio compared to $COUNTRY|Y$ is less than
+MILITARY_STRENGTH_AT_LEAST코1=Relative military strength ratio compared to $COUNTRY|Y$ is at least
+ARMY_STRENGTH_LESS_THAN코1=Relative army strength ratio compared to $COUNTRY|Y$ is less than
+ARMY_STRENGTH_AT_LEAST코1=Relative army strength ratio compared to $COUNTRY|Y$ is at least
+NAVY_STRENGTH_LESS_THAN코1=Relative naval strength ratio compared to $COUNTRY|Y$ is less than
+NAVY_STRENGTH_AT_LEAST코1=Relative naval strength ratio compared to $COUNTRY|Y$ is at least
 AI_PERSONALITY_CHANGE코0=Personality changes to §Y$PER$§W.\n
 AI_ATTITUDE_CHANGE코0=Attitude towards §Y$COUNTRY$§! changes to §Y$ATT$§W.\n
 IS_ON_CONTINENT코0=Is present in
@@ -678,6 +682,7 @@ PLAYER_AI_PREFS_OPTION_TITLE_quick_peace코0=Seek Fast Peace
 PLAYER_AI_PREFS_OPTION_TITLE_move_traders코0=Move Merchants
 PLAYER_AI_PREFS_OPTION_TITLE_take_decisions코0=Take Decisions
 PLAYER_AI_PREFS_OPTION_TITLE_embrace_institutions코0=Embrace Institutions
+PLAYER_AI_PREFS_OPTION_TITLE_manage_estates코0=Manage Estates
 PLAYER_AI_PREFS_OPTION_TITLE_develop_provinces코0=Develop Provinces
 PLAYER_AI_PREFS_OPTION_TITLE_disband_units코0=Disband Units
 PLAYER_AI_PREFS_OPTION_TITLE_change_fleet_missions코0=Change Fleet Missions
@@ -693,6 +698,7 @@ PLAYER_AI_PREFS_OPTION_DESC_quick_peace코0=Controls if the AI will try to make 
 PLAYER_AI_PREFS_OPTION_DESC_move_traders코0=Controls if the AI may move Merchants to other Nodes
 PLAYER_AI_PREFS_OPTION_DESC_take_decisions코0=Controls whether the AI may take Decisions
 PLAYER_AI_PREFS_OPTION_DESC_embrace_institutions코0=Controls whether the AI may Embrace Institutions
+PLAYER_AI_PREFS_OPTION_DESC_manage_estates코0=Controls whether the AI may take any actions to manage your Estates
 PLAYER_AI_PREFS_OPTION_DESC_develop_provinces코0=Controls whether the AI may Develop in its Provinces
 PLAYER_AI_PREFS_OPTION_DESC_disband_units코0=Controls whether the AI may disband its units
 PLAYER_AI_PREFS_OPTION_DESC_change_fleet_missions코0=Controls whether the AI may reassign its fleets' missions
@@ -714,6 +720,7 @@ ACHIEVEMENTS_DISABLED_WRONG_DIFFICULTY코1=§Y- 'Difficulty' Option must be set 
 ACHIEVEMENTS_DISABLED_WRONG_AI_DIFFICULTY코0=§Y- 'AI Difficulty' Option must be set to 'Normal' or 'Hard'.§!
 ACHIEVEMENTS_DISABLED_WRONG_LUCK코0=§Y- 'Lucky Nations' Option must be set to 'Historical'.§!
 ACHIEVEMENTS_DISABLED_MULTIPLAYER코0=§Y- Achievements cannot be earned in Multiplayer.§!
+ACHIEVEMENTS_DISABLED_ENDGAME_TAGS_BLOCKED코0=§Y- 'Limited Country Forming' Option must be set to 'Yes'.§!
 AUTOSAVING코0=Autosaving...
 SAVEITEM_PLAYER_COUNTRY코0=Player: $COUNTRY$
 SAVEITEM_DATE코0=Date: $DATE$
@@ -902,13 +909,24 @@ SAVEGAME_ERROR_BACK_UP_DESC코1=Backing up save file failed when renaming $FROM|
 SAVEITEM_START_WITH_MISSING_DLC코0=§RThis save game was created with DLC that you are missing. It's very likely that your game will be unstable or have other issues! If this is an ironman save achievements will be disabled!§!
 IS_NOT_IN_LARGE_DEBT코0=Is not in large debt.
 IS_IN_ARGE_DEBT코0=Is in large debt.
-MSGRDK_SIGNIN_FAILED_TITLE코=There was a problem
-MSGRDK_SIGNIN_FAILED_TEXT코=We couldn't sign you in with your Microsoft account. Some game features may be unavailable.
-MSGRDK_NO_PERMISSION_TITLE코=Account permission
-MSGRDK_NO_UGC_TEXT코=You have no permission to access user generated content. Mods will be disabled.
-MSGRDK_NO_MULTIPLAYER_TEXT코=You must be signed in to a user profile with multiplayer privileges to play online
-MSGRDK_COMMUNICATIONS_UNAVAILABLE_PRIVILEGE_CHAT코=*** Message was blocked due to lack of the Communication privilege on your user profile ***
-MSGRDK_UGC_MULTIPLAYER_UNAVAILABLE코=Blocked due to lack of User Generated Content privilege for your Microsoft account
+MSGRDK_SIGNIN_FAILED_TITLE코0=There was a problem
+MSGRDK_SIGNIN_FAILED_TEXT코0=We couldn't sign you in with your Microsoft account. Some game features may be unavailable.
+MSGRDK_NO_PERMISSION_TITLE코0=Account permission
+MSGRDK_NO_UGC_TEXT코0=You have no permission to access user generated content. Mods will be disabled.
+MSGRDK_NO_MULTIPLAYER_TEXT코0=You must be signed in to a user profile with multiplayer privileges to play online
+MSGRDK_COMMUNICATIONS_UNAVAILABLE_PRIVILEGE_CHAT코0=*** Message was blocked due to lack of the Communication privilege on your user profile ***
+MSGRDK_UGC_MULTIPLAYER_UNAVAILABLE코0=Blocked due to lack of User Generated Content privilege for your Microsoft account
 CHAT_ERROR_MUTE_MISSINGARGS코0=Invalid syntax, expected: /mute <username>
 CHAT_ERROR_UNMUTE_MISSINGARGS코0=Invalid syntax, expected: /unmute <username>
 CHAT_ERROR_MUTEUNMUTE_SELF코0=You cannot mute or unmute yourself!
+SETTINGS_ACCESSIBILITY:=Accessibility
+SETTINGS_ACCESSIBILITY_TTS:=Multiplayer Chat Text To Speech
+SETTINGS_ACCESSIBILITY_STT:=Multiplayer Chat Speech To Text
+SETTINGS_ACCESSIBILITY_VISUAL_ALERTS:=Multiplayer Chat Visual Alerts
+SETTINGS_ACCESSIBILITY_USE_STT_SHORTCUT:=Speech To Text Toggle Shortcut
+SETTINGS_ACCESSIBILITY_CHAT_LARGE_FONTS:=Multiplayer Chat Large Fonts
+SETTINGS_ACCESSIBILITY_STT_SHORTCUT_INPUT:=Multiplayer Chat Speech To Text Shortcut
+CHAT_CVAA_MESSAGE:=$NAME$ says $MESSAGE$
+CHAT_CVAA_SYSTEM_NAME:=System
+CHAT_CVAA_EMPTY_TEXT:= 
+CHAT_CVAA_MIC:=Mic
