--- a/en/triggers_and_effects_l_english.properties
+++ b/en/triggers_and_effects_l_english.properties
@@ -1,4 +1,8 @@
-X_BECOMES_HARMONIZED코0=$NAME|Y$ becomes harmonized.\n
+﻿X_BECOMES_HARMONIZED코0=$NAME|Y$ becomes harmonized.\n
+TRENT_IS_NOT_ENABLED코0=Council of Trent has not happened.
+TRENT_IS_ENABLED코1=Council of Trent has Started.
+ENABLE_COUNCIL_OF_TRENT코0=Starts the §YCouncil of Trent§!\n
+DISABLE_COUNCIL_OF_TRENT코0=Ends the §YCouncil of Trent§!\n
 NOT_CURRENT_ICON_TR코0=$ICON|Y$ is NOT currently commissioned.
 CURRENT_ICON_TR코0=$ICON|Y$ is currently commissioned.
 ANY_STATE_STARTS코0=Any State
@@ -43,7 +47,7 @@ NOT_INSTITUTION_ENABLED코0=$WHICH|Y$ has not yet been enabled.
 INSTITUTION_ENABLED코0=$WHICH|Y$ has been discovered.\n
 NOT_INSTITUTION_ORIGIN코0=Is NOT the origin of $WHICH|Y$.\n
 INSTITUTION_ORIGIN코0=Is the origin of $WHICH|Y$.
-ADD_INSTITUTION_EMBRACEMENT_EFFECT코0=$DIRECTION$ $VALUE$ support for $WHICH|Y$.\n
+ADD_INSTITUTION_EMBRACEMENT_EFFECT코0=$PROV$ $DIRECTION$ $VALUE$ support for $WHICH|Y$.\n
 HAS_MERCHANT_TRIGGER코1=$WHO|Y$ has a Merchant in $WHERE|Y$.\n
 HAS_NOT_MERCHANT_TRIGGER코0=$WHO|Y$ does NOT have a merchant in $WHERE|Y$.\n
 HAS_NOT_DISASTER코0=Is NOT in $NAME|Y$.\n
@@ -64,8 +68,8 @@ HAVE_LIGHT_SHIP_IN코0=$COUNTRY$ have light ships in $PROVINCE$.
 HAVE_NO_LIGHT_SHIP_IN코0=$COUNTRY$ have NO light ships in $PROVINCE$.
 HAVE_GALLEYS_IN코0=$COUNTRY$ have galleys in $PROVINCE$.
 HAVE_NO_GALLEYS_IN코0=$COUNTRY$ have NO galleys in $PROVINCE$.
-HAVE_TRANSPORTS_IN코0=$COUNTRY$ have trasport ships in $PROVINCE$.
-HAVE_NO_TRANSPORTS_IN코0=$COUNTRY$ have NO trasport ships in $PROVINCE$.
+HAVE_TRANSPORTS_IN코0=$COUNTRY$ have transport ships in $PROVINCE$.
+HAVE_NO_TRANSPORTS_IN코0=$COUNTRY$ have NO transport ships in $PROVINCE$.
 ADD_CORE_CONSTRUCTION_EFFECT코0=Start core construction for §Y$COST$%§! of the cost, and §Y$SPEED$%§! of the time.\n
 ADD_BUILDING_CONSTRUCTION_EFFECT코0=Start construction of §Y$BUILDING$§! for §Y$COST$%§! of the cost, and §Y$SPEED$%§! of the time.\n
 ADD_CULTURE_CONSTRUCTION_EFFECT코0=Start culture conversion for §Y$COST$%§! of the cost, and §Y$SPEED$%§! of the time.\n
@@ -107,6 +111,8 @@ HAVE_GROWN_BY_LESS_STATES_THAN코0=Have grown by less states than $VALUE|Y$
 HAVE_GROWN_BY_MORE_STATES_THAN코0=Have grown by at least $VALUE|Y$ states
 HAVE_LESS_TERRITORIES_THAN코0=Have less territories than $VALUE|Y$
 HAVE_MORE_TERRITORIES_THAN코0=Number of territories at least $VALUE|Y$
+HAVE_LESS_OWNED_AREAS_THAN코0=Have less areas than $VALUE|Y$
+HAVE_MORE_OWNED_AREAS_THAN코0=Number of areas at least $VALUE|Y$
 HAVE_LESS_PROVINCES_IN_STATES_THAN코0=Have less provinces in states than $VALUE|Y$
 HAVE_MORE_PROVINCES_IN_STATES_THAN코0=Number of provinces in states at least $VALUE|Y$
 HAVE_LESS_PROVINCES_IN_TERRITORIES_THAN코0=Have less provinces in territories than $VALUE|Y$
@@ -167,13 +173,15 @@ NATION_DESIGNER_POINTS_AT_LEAST코0=Used at least $VAL|Y$ points when creating t
 NATION_DESIGNER_TECH_GROUP_COST코0=Point Cost of $COST|Y$ for the following conditions:\n
 REFORM_DESIRE_IS_LESS_THAN코0=Reform Desire is less than §Y$SIZE$§!.\n
 REFORM_DESIRE_IS_AT_LEAST코0=Reform Desire is at least §Y$SIZE$§!.\n
-REFORM_DESIRE_EFFECT코0=Catholicism $DIRECTION$ $PERC$ Reform Desire.\n
+REFORM_DESIRE_EFFECT코1=Catholicism $DIRECTION$ $PERC|%-$ Reform Desire.\n
 RELIG_ATTACK코0=Attack on Religious Enemies
 GOV_ATTACK코0=Attack on different Governments
-HAS_NOT_IDEA_ALLOWING코0=Do NOT have idea allowing '§WHICH§!'.\n
-HAS_IDEA_ALLOWING코0=Has idea allowing '§WHICH§!'.\n
-OPPOSE_NEXT_REFORM코0=Opposes next reform.
-WANTS_NEXT_REFORM코0=Wants next reform.
+HAS_NOT_IDEA_ALLOWING코1=Do NOT have idea allowing '$WHICH$'.\n
+HAS_IDEA_ALLOWING코1=Has idea allowing '$WHICH$'.\n
+HAS_NOT_FEATURE_ALLOWING코1=Do NOT have feature allowing '$WHICH$'.\n
+HAS_FEATURE_ALLOWING코1=Has feature allowing '$WHICH$'.\n
+OPPOSE_NEXT_REFORM코1=Opposes all of the available reforms.
+WANTS_NEXT_REFORM코1=Wants at least one of the available reforms.
 HAVE_LESS_THAN_ADM_POWER코0=Have less Administrative Power than 
 HAVE_MORE_THAN_ADM_POWER코0=Administrative Power at least 
 HAVE_LESS_THAN_DIP_POWER코0=Have less Diplomatic Power than 
@@ -191,7 +199,7 @@ OWN_CONTROL_AT_LEAST_INSTITUTIONS코0=Own and control at least $TXT$ institution
 HASNT_3_STAR_TR코0=No 3 Star Leader Commanding
 HAS_3_STAR_TR코0=Have a 3-Star general or admiral in command
 HAS_UNIFIED_CUL코0=Owns all $WHICH|Y$ provinces
-HASNT_UNIFIED_CULTUREGR코0=Has not unified the culturegroup
+HASNT_UNIFIED_CULTUREGR코0=Has not unified the culture group
 IS_VARIABLE_EQUAL코0=$VAR|Y$ is equal to $VALUE|Y$
 NOT_IS_VARIABLE_EQUAL코0=$VAR|Y$ is NOT equal to $VALUE|Y$
 IS_NOT_MARCH코0=Is NOT a march
@@ -229,14 +237,14 @@ IS_NOT_COUNTRY_CLAIM코0=Is NOT a $COUNTRYADJ$ claim.
 IS_COUNTRY_CLAIM코0=Is a $COUNTRYADJ$ claim.
 ADVISOR_NOT_EMPLOYED코0=§Y$NAME$§W is not currently employed.\n
 ADVISOR_EMPLOYED코0=§Y$NAME$§W is currently employed.\n
-ADVISOR_TYPE_NOT_EMPLOYED_0코0=No $TYPE$ is currently employed.\n
-ADVISOR_TYPE_NOT_EMPLOYED_1코0=No $ARG0$ $TYPE$ is currently employed.\n
-ADVISOR_TYPE_NOT_EMPLOYED_2코0=No $ARG0$ $ARG1$ $TYPE$ is currently employed.\n
-ADVISOR_TYPE_NOT_EMPLOYED_3코0=No $ARG0$ $ARG1$ $ARG2$ $TYPE$ is currently employed.\n
-ADVISOR_TYPE_EMPLOYED_0코0=$TYPE$ is currently employed.\n
-ADVISOR_TYPE_EMPLOYED_1코0=$ARG0$ $TYPE$ is currently employed.\n
-ADVISOR_TYPE_EMPLOYED_2코0=$ARG0$ $ARG1$ $TYPE$ is currently employed.\n
-ADVISOR_TYPE_EMPLOYED_3코0=$ARG0$ $ARG1$ $ARG2$ $TYPE$ is currently employed.\n
+ADVISOR_TYPE_NOT_EMPLOYED_0코0=No $TYPE$ is currently employed.\n" #Example: No Quartermaster is currently employed
+ADVISOR_TYPE_NOT_EMPLOYED_1코0=No $ARG0$ $TYPE$ is currently employed.\n" #Example: No French Advisor is currently employed
+ADVISOR_TYPE_NOT_EMPLOYED_2코0=No $ARG0$ $ARG1$ $TYPE$ is currently employed.\n" #Example: No Protestant English Statesman is currently employed
+ADVISOR_TYPE_NOT_EMPLOYED_3코0=No $ARG0$ $ARG1$ $ARG2$ $TYPE$ is currently employed.\n" #Example: No Protestant English female Statesman is currently employed
+ADVISOR_TYPE_EMPLOYED_0코0=$TYPE$ is currently employed.\n" #Example: Quartermaster is currently employed
+ADVISOR_TYPE_EMPLOYED_1코0=$ARG0$ $TYPE$ is currently employed.\n" #Example: French Advisor is currently employed
+ADVISOR_TYPE_EMPLOYED_2코0=$ARG0$ $ARG1$ $TYPE$ is currently employed.\n" #Example: Protestant English Statesman is currently employed
+ADVISOR_TYPE_EMPLOYED_3코0=$ARG0$ $ARG1$ $ARG2$ $TYPE$ is currently employed.\n" #Example: Protestant English male Statesman is currently employed
 ADD_SPY_NETWORK_IN코0=Add size $VAL|+$ to the Spy Network in $TARGET$.\n
 ADD_SPY_NETWORK_FROM코0=$TARGET$ Adds size $VAL|-$ to their Spy Network.\n
 HAVE_SPY_NETWORK_IN코0=Have a Spy Network of at least size $VAL$ in $TARGET$.\n
@@ -288,8 +296,10 @@ DYNASTY_CHANGE코0=$WHO$ becomes a $NEW$\n
 IS_NOT_STRONGEST_TRADE_POWER코0=§Y$WHO$§W is NOT the strongest trade power in the area.
 HAS_NOT_MORE_TRADE_POWER코0=$WHO|Y$ has less than $VAL$% trade power.
 HAS_SAME_OR_MORE_TRADE_POWER코1=$WHO|Y$ has §Y$VAL$%§W or more trade power.
-HAS_NOT_MORE_PRIVATEERS코0=$WHO|Y$ privateers have less than $VAL$% of the trade power.
-HAS_SAME_OR_MORE_PRIVATEERS코0=$WHO|Y$ privateers have at least $VAL$% trade power.
+TOTAL_HAS_NOT_MORE_PRIVATEERS코0=Total privateers in $WHERE|Y$ is less than §Y$VAL$%§! of the trade power.
+TOTAL_HAS_SAME_OR_MORE_PRIVATEERS코0=Total privateers in $WHERE|Y$ is at least §Y$VAL$%§! of the trade power.
+HAS_NOT_MORE_PRIVATEERS코0=$WHO|Y$ privateers have less than §Y$VAL$%§! of the trade power.
+HAS_SAME_OR_MORE_PRIVATEERS코0=$WHO|Y$ privateers have at least §Y$VAL$%§! trade power.
 HAS_PRIVATEERS_IN_ANY_NODE코0=$WHO|Y$ has privateers in any node.
 HAS_NOT_PRIVATEERS_IN_ANY_NODE코0=$WHO|Y$ doesn't have privateers in any node.
 HAS_NOT_MORE_PRIVATEERS_IN_NODE코0=$WHO|Y$ has less than $VAL$% privateer share in $WHERE|Y$.
@@ -518,8 +528,8 @@ ATTACKER_WARLEADER코0=Attacker War Leader
 CELESTIAL_REFORM_LEVEL_NOT코0=$REFORMNAME|Y$ is NOT enacted.
 CELESTIAL_REFORM_LEVEL코0=$REFORMNAME|Y$ is enacted.
 SET_CELESTIAL_EMPEROR_DESC코0=$COUNTRYNAME$ becomes the Emperor of China.\n
-DISMANTLE_CELESTIAL_EMPIRE_DESC코0=Empire of China is dismantled.\n
-REFORM_CELESTIAL_EMPIRE_DESC코0=Empire of China is re-formed.\n
+DISMANTLE_CELESTIAL_EMPIRE_DESC코0=The Empire of China is dismantled.\n
+REFORM_CELESTIAL_EMPIRE_DESC코0=The Empire of China is re-formed.\n
 ADD_MANDATE_DESC코0=$DIRECTION$ $MANDATECHANGE|Y$ Mandate.\n
 SET_MANDATE_DESC코0=Set Mandate to $MANDATEVALUE|Y$.\n
 IS_SUBJECT_TYPE코0=Is a $SUBJECTTYPE$.\n
@@ -601,8 +611,15 @@ HAVE_MORE_THAN_N_RELIGIONS_IN_COURT코0=Have at least §Y$VALUE$§! different Re
 HAVE_LESS_THAN_N_REGIMENTS_AT_FULL_DRILL코1=Have less than §Y$VALUE$§! Regiments at Army full Drill.\n
 HAVE_MORE_THAN_N_REGIMENTS_AT_FULL_DRILL코1=Have at least §Y$VALUE$§! Regiments at full Army Drill.\n
 ANY_ARMY_STARTS코0=Any Army
-HAVE_LESS_JANISSARIES_THAN_PERC코0=Less than $PERC|%|Y$ of the army is Janissary Regiments ($SHIPS|Y$)
-HAVE_MORE_JANISSARIES_THAN_PERC코0=More than $PERC|%|Y$ of the army is Janissary Regiments ($SHIPS|Y$)
+HAVE_LESS_REGIMENT_TYPE_THAN_PERC코2=Less than $PERC|%Y$ of the army are $TYPE$ Regiments ($NUM|Y$)
+HAVE_MORE_REGIMENT_TYPE_THAN_PERC코2=More than $PERC|%Y$ of the army are $TYPE$ Regiments ($NUM|Y$)
+NORMAL_REGIMENT_TYPE코0=normal
+MERCENARY_REGIMENT_TYPE코0=Mercenary
+BANNER_REGIMENT_TYPE코0=Banner
+STRELTSY_REGIMENT_TYPE코0=Streltsy
+COSSACKS_REGIMENT_TYPE코0=Cossack
+JANISSARIES_REGIMENT_TYPE코0=Janissary
+RAJPUT_REGIMENT_TYPE코0=Rajput
 HAVE_LESS_JANISSARIES_THAN코0=Have less Janissary Regiments than $VALUE|Y$.\n
 HAVE_AT_LEAST_JANISSARIES_THAN코0=Have at least $VALUE|Y$ Janissary Regiments.\n
 HAVE_LESS_RAJPUT_THAN코0=Have less Rajput Regiments than $VALUE|Y$.\n
@@ -614,7 +631,7 @@ HAS_NOT_LATENT_TRADE_GOODS_SPECIFIC코0=Doesn't have $NAME$ as latent trade good
 HAS_LATENT_TRADE_GOODS_SPECIFIC코0=Have $NAME$ as latent trade goods.
 HAS_NOT_LATENT_TRADE_GOODS_ANY코0=Doesn't have any latent trade goods.
 HAS_LATENT_TRADE_GOODS_ANY코0=Has a latent trade goods.
-EFFECT_REMOVE_LATENT_GOODS코0=$GOODS|Y$ is rmoved as latent goods of $PROVINCE|Y$.
+EFFECT_REMOVE_LATENT_GOODS코0=$GOODS|Y$ is removed as latent goods of $PROVINCE|Y$.
 EFFECT_REMOVE_ALL_LATENT_GOODS코0=All latent trade goods are removed from $PROVINCE|Y$.
 INNOVATIVENESS_IS_LESS_THAN코0=Innovativeness is less than §Y$SIZE$§!.\n
 INNOVATIVENESS_IS_AT_LEAST코0=Innovativeness is at least §Y$SIZE$§!.\n
@@ -622,7 +639,8 @@ CHANGE_INNOVATIVENESS_EFFECT코0=$DIRECTION$ $VALUE$ Innovativeness.\n
 RAISE_WAR_TAXES_EFFECT코0=Raise War Taxes for $DURATION|Y$ years at no £mil cost.\n
 TAKE_LOAN_EFFECT코0=Take a $DURATION|Y$ month Bank Loan
 INTEREST_MODIFIER_DESC코0= at a $VAL$ $DIR$ percentage of interest. 
-FIXED_INTEREST_DESC코0= The interest on this loan is fixed.
+FIXED_INTEREST_DESC코1= The interest on this loan is fixed to $RATE|Y$.
+ESTATE_LOAN_DESC코0= An Estate of yours provides this loan.
 LOWER코0=lower
 HIGHER코0=higher
 WITH_GOVERNMENT_TYPE코0=The country they form will have $GOV|Y$ Government.
@@ -641,3 +659,12 @@ HAS_NO_HOSTILE_TROOPS코0=Has no hostile troops.\n
 OWNS_ALL_PROVINCES코0=Owns all provinces:\n
 HAS_NON_GENERIC_MISSIONS코0=$COUNTRY|Y$ does have non-generic missions.\n
 HAS_NOT_NON_GENERIC_MISSIONS코0=$COUNTRY|Y$ does NOT have non-generic missions.\n
+IS_REBEL_TYPE_TRIGGER코0=Is $TYPE|Y$ rebels.\n
+IS_NOT_REBEL_TYPE_TRIGGER코0=Is not $TYPE|Y$ rebels.\n
+EFFECT_GAIN_POWER_PROJECTION코0=$TAG|Y$ will gain $AMOUNT|G$ power projection.
+EFFECT_LOSE_POWER_PROJECTION코0=$TAG|Y$ will lose $AMOUNT|R$ power projection.
+EFFECT_SUPPORT_INDEPENDENCE코0=$TAG|Y$ will support the independence of $TARGET|Y$.
+TRIGGER_WAS_HUMILIATED_BY코0=$TAG|Y$ was recently humiliated by $BY|Y$.
+TRIGGER_WAS_NOT_HUMILIATED_BY코0=$TAG|Y$ was not recently humiliated by $BY|Y$.
+TRIGGER_IS_HIRING_CONDOTTIERE_FROM코0=$TAG|Y$ is hiring condottiere from $FROM|Y$.
+TRIGGER_IS_NOT_HIRING_CONDOTTIERE_FROM코0=$TAG|Y$ is not hiring condottiere from $FROM|Y$.
